--- a/android/app/src/main/res/layout/item_stadium_chart_bar.xml
+++ b/android/app/src/main/res/layout/item_stadium_chart_bar.xml
@@ -182,7 +182,7 @@
                 android:textColor="@color/white"
                 android:textSize="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tv_second_team_name"
+                app:layout_constraintEnd_toEndOf="@id/tv_second_team_name"
                 app:layout_constraintTop_toBottomOf="@id/tv_second_team_name"
                 tools:text="90.0%" />
         </androidx.constraintlayout.widget.ConstraintLayout>
