refactor: 응원 팀 RecyclerView 아이템 클릭 리스너 설정 방식 변경

--- a/android/app/src/main/res/layout/item_favorite_team.xml
+++ b/android/app/src/main/res/layout/item_favorite_team.xml
@@ -8,12 +8,17 @@
         <variable
             name="favoriteTeamUiModel"
             type="com.yagubogu.presentation.favorite.FavoriteTeamUiModel" />
+
+        <variable
+            name="handler"
+            type="com.yagubogu.presentation.favorite.FavoriteTeamViewHolder.Handler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_white_stroke_gray100_radius_12dp">
+        android:background="@drawable/bg_white_stroke_gray100_radius_12dp"
+        android:onClick="@{() -> handler.onItemClick(favoriteTeamUiModel)}">
 
         <TextView
             android:id="@+id/tv_team_emoji"
