--- a/android/app/src/main/res/layout/item_attendance_history.xml
+++ b/android/app/src/main/res/layout/item_attendance_history.xml
@@ -71,8 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@{attendanceHistoryItem.attendanceDate.toString()}"
             android:textColor="@color/gray500"
+            app:dateFormat="@{attendanceHistoryItem.attendanceDate}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_away_team_name"
