--- a/android/app/src/main/res/layout/item_attendance_history.xml
+++ b/android/app/src/main/res/layout/item_attendance_history.xml
@@ -35,10 +35,9 @@
             style="@style/TextView.Pretendard.SemiBold.20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
             android:text="@{attendanceHistoryItem.awayTeam.name}"
             app:layout_constraintEnd_toStartOf="@id/tv_vs"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="KIA" />
 
@@ -47,11 +46,10 @@
             style="@style/TextView.Pretendard.SemiBold.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="6dp"
             android:text="vs"
             app:layout_constraintBottom_toBottomOf="@id/tv_away_team_name"
-            app:layout_constraintEnd_toStartOf="@id/tv_home_team_name"
-            app:layout_constraintStart_toEndOf="@id/tv_away_team_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_away_team_name" />
 
         <TextView
@@ -59,8 +57,8 @@
             style="@style/TextView.Pretendard.SemiBold.20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
             android:text="@{attendanceHistoryItem.homeTeam.name}"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_vs"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="두산" />
