design: 내 통계 화면 스크롤바 제거

--- a/android/app/src/main/res/layout/fragment_my_stats.xml
+++ b/android/app/src/main/res/layout/fragment_my_stats.xml
@@ -13,6 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         tools:context=".presentation.stats.my.MyStatsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
