refactor: 응원 팀 선택 RecyclerView ItemDecoration 삭제 및 관련 코드 수정

--- a/android/app/src/main/res/layout/activity_favorite_team.xml
+++ b/android/app/src/main/res/layout/activity_favorite_team.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+        android:id="@+id/constraint_favorite_team_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/gray050"
@@ -16,7 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="14dp"
             android:text="@string/favorite_team_selection"
             android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@id/rv_favorite_team_list"
@@ -27,7 +28,7 @@
             android:id="@+id/rv_favorite_team_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:paddingHorizontal="8dp"
+            android:paddingHorizontal="14dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_favorite_team_selection"
