design: 다이얼로그 TextView 터치 용이하도록 padding 추가

--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="20dp"
+            android:padding="20dp"
             android:text="@string/all_cancel"
             android:textColor="@color/gray500"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +71,7 @@
             style="@style/TextView.Pretendard.Medium.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             android:text="@string/all_confirm"
             android:textColor="@color/primary500"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
