refactor: 현장톡 목록의 바닥 패딩 영역도 같이 스크롤되게 수정

--- a/android/app/src/main/res/layout/fragment_livetalk.xml
+++ b/android/app/src/main/res/layout/fragment_livetalk.xml
@@ -6,13 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingHorizontal="20dp"
-        android:paddingBottom="12dp"
         tools:context=".presentation.livetalk.LivetalkFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_livetalk_stadium"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="12dp"
             tools:itemCount="5"
             tools:listitem="@layout/item_livetalk_stadium" />
 
