--- a/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_favorite_team_confirm.xml
@@ -41,7 +41,7 @@
 
         <TextView
             android:id="@+id/tv_favorite_team_name"
-            style="@style/TextView.Pretendard.Medium.16"
+            style="@style/TextView.Pretendard.SemiBold.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
@@ -56,9 +56,9 @@
             style="@style/TextView.Pretendard.Medium.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="20dp"
-            android:padding="20dp"
+            android:layout_marginBottom="8dp"
+            android:paddingHorizontal="48dp"
+            android:paddingVertical="20dp"
             android:text="@string/all_cancel"
             android:textColor="@color/gray500"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,8 @@
             style="@style/TextView.Pretendard.Medium.16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:paddingHorizontal="48dp"
+            android:paddingVertical="20dp"
             android:text="@string/all_confirm"
             android:textColor="@color/primary500"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
