fix: Team enum 값 변경에 따른 이모지 및 팀명 수정

--- a/android/app/src/main/res/layout/item_livetalk_stadium.xml
+++ b/android/app/src/main/res/layout/item_livetalk_stadium.xml
@@ -86,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{livetalkStadiumItem.awayTeam.nickName}"
+            android:text="@{livetalkStadiumItem.awayTeam.nickname}"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_away_team_emoji"
@@ -126,7 +126,7 @@
             style="@style/TextView.Esamanru.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{livetalkStadiumItem.homeTeam.nickName}"
+            android:text="@{livetalkStadiumItem.homeTeam.nickname}"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/tv_away_team_nickname"
             app:layout_constraintEnd_toEndOf="@id/tv_home_team_emoji"
