refactor: 현장톡 EditText 높이 동적 조절

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -70,12 +70,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_input_message"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/bg_gray100_stroke_gray300_radius_12dp"
+            android:minHeight="40dp"
             android:paddingHorizontal="12dp"
+            android:paddingVertical="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/constraint_btn_send"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -88,6 +90,7 @@
                 android:background="@null"
                 android:gravity="center_vertical"
                 android:hint="현재 고척돔은..."
+                android:inputType="textMultiLine"
                 android:minHeight="16dp"
                 android:textColor="#333333"
                 android:textColorHint="@color/gray500"
