--- a/android/app/src/main/res/layout/item_livetalk_stadium.xml
+++ b/android/app/src/main/res/layout/item_livetalk_stadium.xml
@@ -8,6 +8,10 @@
         <variable
             name="livetalkStadiumItem"
             type="com.yagubogu.presentation.livetalk.stadium.LivetalkStadiumItem" />
+
+        <variable
+            name="handler"
+            type="com.yagubogu.presentation.livetalk.stadium.LivetalkStadiumViewHolder.Handler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:onClick="@{() -> handler.onItemClick(livetalkStadiumItem)}"
         android:background="@{livetalkStadiumItem.isVerified ? @drawable/bg_white_stroke_primary500_radius_12dp : @drawable/bg_white_stroke_gray100_radius_12dp}"
         android:paddingHorizontal="24dp"
         android:paddingVertical="20dp"
